@@ -55,6 +55,7 @@
     * Removed IP-Address attribute from folders
     * Supporting localized tag titles
     * Using Username as default value for full names when editing users
+    * Snapshot/Factory Reset is possible even with a broken config
     * FIX: Fixed missing folders in "move to" dropdown fields
     * FIX: Fixed "move to target folders" after CSV import
     * FIX: Fixed problem with duplicate extra_buttons when using the i18n of multiisite
